# bundler

./: .editorconfig  .gitignore  .luarc.json  LICENSE  README.md  ]  book.toml  flake.nix
.github/workflows/: check.yml  mdbook.yml
bundler/: Cargo.toml  README.md
bundler-nvim/lua/bundler/: init.lua  log.lua  types.lua
bundler-vim/plugin/: bundler.vim
bundler/src/: bundle.rs  bundler.rs  collection_util.rs  constant.rs  constants.rs  content.rs  lua.rs  main.rs  payload.rs  unpack.rs  util.rs
bundler/src/bundle/: config.rs  constant.rs  export.rs  incremental_id_generator.rs  lua.rs  merge.rs
bundler/src/content/: common.rs  config.rs  from_target.rs  hashable.rs  id_table.rs  meta.rs  mod.rs  plugin.rs  unpack.rs  vim.rs
bundler/src/payload/: bundle.rs  common.rs  config.rs  core.rs  eager.rs  group.rs  lazy.rs  meta.rs  mod.rs  operation.rs  opt.rs  plugin.rs  start.rs  vim.rs
bundler/src/payload/plugin/: eager.rs  lazy.rs
bundler/src/util/: collection.rs  file.rs
docs/: SUMMARY.md  common-configuration.md  introduction.md  neovim-configuration-example-args.md  neovim-configuration.md  quick-start.md  vim-configuration.md
examples/neovim/: flake.nix
examples/vim/: flake.nix
modules/: default.nix  runtime.lua
nix/: bundler-nvim.nix  bundler-vim.nix  bundler.nix  flake-module.nix  neovim-flake-module.nix  vim-flake-module.nix
