[package]
name = "bundler"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
rstest = "0.21.0"
maplit = "1.0.2"
big_s = "1.0.2"
